--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ environment:
 
   global:
       PYTHON: "C:\\conda"
-      MINICONDA_VERSION: "3.5.5"
+      MINICONDA_VERSION: "latest"
       CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\ci-helpers\\appveyor\\windows_sdk.cmd"
       PYTHON_ARCH: "64" # needs to be set for CMD_IN_ENV to succeed. If a mix
                         # of 32 bit and 64 bit builds are needed, move this
@@ -13,7 +13,22 @@ environment:
       CONDA_DEPENDENCIES: "numpy cython sphinx pytest h5py beautifulsoup4 requests astropy"
 
   matrix:
+
       - PYTHON_VERSION: "2.7"
+        ASTROPY_VERSION: "1.0"
+        NUMPY_VERSION: "1.9.1"
 
 platform:
     -x64
+
+install:
+    - "git clone git://github.com/astropy/ci-helpers.git"
+    - "powershell ci-helpers/appveyor/install-miniconda.ps1"
+    - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
+    - "activate test"
+
+# Not a .NET project, we build the package in the install step instead
+build: false
+
+test_script:
+  - "%CMD_IN_ENV% python setup.py test"
