--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,18 +1,24 @@
 include README.rst
+include CHANGES.rst
 
 include ez_setup.py
 include ah_bootstrap.py
 include setup.cfg
 
+recursive-include *.pyx *.pxd *.c *.cpp *.h
 recursive-include docs *
 recursive-include licenses *
 recursive-include cextern *
 recursive-include scripts *
 
-exclude *.pyc *.o
-prune docs/_build
 prune build
+prune docs/_build
+prune docs/api
+
 
 recursive-include astropy_helpers *
 exclude astropy_helpers/.git
 exclude astropy_helpers/.gitignore
+
+
+global-exclude *.pyc *.o
