Updating numpy version for travis, adding old and prerelease builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ env:
         # The following versions are the 'default' for tests, unless
         # overidden underneath. They are defined here in order to save having
         # to repeat them for all configurations.
-        - NUMPY_VERSION=1.10
+        - NUMPY_VERSION=stable
         - ASTROPY_VERSION=stable
         - SETUP_CMD='test'
         - PIP_DEPENDENCIES=''
@@ -61,9 +61,14 @@ matrix:
         - python: 3.5
           env: ASTROPY_VERSION=development
 
-        # Try older numpy version
+        # Try older numpy version, 1.9 is tested above with py3.3
         - python: 2.7
-          env: NUMPY_VERSION=1.9
+          env: NUMPY_VERSION=1.10
+
+        # Try numpy pre-release version, this runs only when a pre-release
+        # is available on pypi.
+        - python: 3.5
+          env: NUMPY_VERSION=prerelease SETUP_CMD='test'
 
         # try a version *without* h5py - we need this for readthedocs
         - python: 2.7
