--- a/.travis.yml
+++ b/.travis.yml
@@ -74,6 +74,12 @@ matrix:
         - python: 2.7
           env: CONDA_DEPENDENCIES="`echo $CONDA_DEPENDENCIES | sed 's/ h5py//'`" # this magic incantation removes the substring " h5py" from the dependencies
 
+    allow_failures:
+        # The build with numpy v1.11.1rc1 halts in the middle without
+        # showing any obvious reason, thus allowing it to fail for now.
+        - python: 3.5
+          env: NUMPY_VERSION=prerelease SETUP_CMD='test'
+
 before_install:
 
     # If there are matplotlib tests, comment these out to
