Modified .travis.yml to use NUMPY_VERSION=1.9 instead of default 1.12

--- a/.travis.yml
+++ b/.travis.yml
@@ -55,6 +55,10 @@ matrix:
           env: NUMPY_VERSION=1.9
                CONDA_DEPENDENCIES='cython scipy requests matplotlib h5py beautiful-soup'
 
+        - python: 3.4
+          env: NUMPY_VERSION=1.9
+               CONDA_DEPENDENCIES='cython scipy requests matplotlib h5py beautiful-soup'
+
         # Try Astropy development version
         - python: 2.7
           env: ASTROPY_VERSION=development
