--- a/.travis.yml
+++ b/.travis.yml
@@ -40,41 +40,47 @@ matrix:
         - python: 2.7
           env: SETUP_CMD='egg_info'
 
-        # Do a coverage test in Python 2.
-        - python: 2.7
-          env: SETUP_CMD='test --coverage'
+        # # Do a coverage test in Python 2.
+        # - python: 2.7
+        #   env: SETUP_CMD='test --coverage'
 
         # Check for sphinx doc build warnings - we do this first because it
         # may run for a long time
         - python: 2.7
           env: SETUP_CMD='build_sphinx -w'
 
-        # Python3.3 is a bit old, thus conda doesn't have all version dependencies including newer numpies
-        - python: 3.3
-          env: NUMPY_VERSION=1.9
-               CONDA_DEPENDENCIES='cython scipy requests matplotlib h5py beautiful-soup'
+        - python: 3.6
+          env: SETUP_CMD='build_sphinx -w'
 
-        - python: 3.4
-          env: SETUP_CMD='egg_info'
+        # # Python3.3 is a bit old, thus conda doesn't have all version dependencies including newer numpies
+        # - python: 3.3
+        #   env: NUMPY_VERSION=1.9
+        #        CONDA_DEPENDENCIES='cython scipy requests matplotlib h5py beautiful-soup'
 
-        - python: 3.4
-          env: NUMPY_VERSION=1.11
-               CONDA_DEPENDENCIES='cython scipy requests matplotlib h5py beautiful-soup'
+        # - python: 3.4
+        #   env: SETUP_CMD='egg_info'
 
-        # Try Astropy development version
-        - python: 2.7
-          env: ASTROPY_VERSION=development
-        - python: 3.5
-          env: ASTROPY_VERSION=development
+        # - python: 3.4
+        #   env: NUMPY_VERSION=1.11
+        #        CONDA_DEPENDENCIES='cython scipy requests matplotlib h5py beautiful-soup'
 
-        # Try older numpy version, 1.9 is tested above with py3.3
-        - python: 2.7
-          env: NUMPY_VERSION=1.10
+        # # Try Astropy development version
+        # - python: 2.7
+        #   env: ASTROPY_VERSION=development
+        # - python: 3.5
+        #   env: ASTROPY_VERSION=development
 
-        # Try numpy pre-release version, this runs only when a pre-release
-        # is available on pypi.
-        - python: 3.5
-          env: NUMPY_VERSION=prerelease SETUP_CMD='test'
+        # # Try older numpy version, 1.9 is tested above with py3.3
+        # - python: 2.7
+        #   env: NUMPY_VERSION=1.10
+
+        # # Try numpy pre-release version, this runs only when a pre-release
+        # # is available on pypi.
+        # - python: 3.5
+        #   env: NUMPY_VERSION=prerelease SETUP_CMD='test'
+
+        - python: 3.6
+          env: NUMPY_VERSION=1.12 SETUP_CMD='test'
 
         # try a version *without* h5py - we need this for readthedocs
         - python: 2.7
