Updated setup.cfg to use tool:pytest, replacing pytest section

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ all_files = 1
 upload-dir = docs/_build/html
 show-response = 1
 
-[pytest]
+[tool:pytest]
 minversion = 2.2
 norecursedirs = build docs/_build
 doctest_plus = enabled
@@ -17,8 +17,8 @@ auto_use = True
 
 [metadata]
 package_name = halotools
-description = Package designed to analyze N-body simulations and constrain models of cosmology and galaxy evolution. 
-long_description = Package designed to analyze N-body simulations and constrain models of cosmology and galaxy evolution. 
+description = Package designed to analyze N-body simulations and constrain models of cosmology and galaxy evolution.
+long_description = Package designed to analyze N-body simulations and constrain models of cosmology and galaxy evolution.
 author = Andrew Hearin
 author_email = andrew.hearin@yale.edu
 license = BSD
