Running python 3.3 tests using astropy 1.3 to work around changes in pytest 3.2, as recommended by @bsipocz

--- a/.travis.yml
+++ b/.travis.yml
@@ -55,6 +55,7 @@ matrix:
         # Python3.3 is a bit old, thus conda doesn't have all version dependencies including newer numpies
         - python: 3.3
           env: NUMPY_VERSION=1.9
+                ASTROPY_VERSION=1.3
                CONDA_DEPENDENCIES='cython scipy requests matplotlib h5py beautiful-soup'
 
         - python: 3.4
