--- a/.travis.yml
+++ b/.travis.yml
@@ -39,8 +39,8 @@ env:
 
 matrix:
     include:
-        # Do a coverage test in Python 2.
-        - python: 2.7
+        # Do a coverage test in Python 3
+        - python: 3.6
           env: SETUP_CMD='test --coverage'
 
         # Check for sphinx doc build warnings - we do this first because it
