Changed author email

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ package_name = halotools
 description = Package designed to analyze N-body simulations and constrain models of cosmology and galaxy evolution.
 long_description = Package designed to analyze N-body simulations and constrain models of cosmology and galaxy evolution.
 author = Andrew Hearin
-author_email = andrew.hearin@yale.edu
+author_email = ahearin@anl.gov
 license = BSD
 url = http://astropy.org/
 edit_on_github = True
