--- a/.travis.yml
+++ b/.travis.yml
@@ -73,6 +73,7 @@ matrix:
           env: NUMPY_VERSION=prerelease SETUP_CMD='test' ASTROPY_USE_SYSTEM_PYTEST=1
 
         - python: 3.5
+          env: SETUP_CMD='test'
 
         # try a version *without* h5py - we need this for readthedocs
         - python: 2.7
