--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ env:
         - ASTROPY_VERSION=stable
         - SETUP_CMD='test'
         - PIP_DEPENDENCIES=''
-        - PYTEST_VERSION<3.2
+        - PYTEST_VERSION=3.1.0
         # Here we list the dependencies to be installed that are in conda
         - CONDA_DEPENDENCIES='cython scipy beautifulsoup4 requests matplotlib h5py'
     matrix:
@@ -65,7 +65,7 @@ matrix:
 
         # Try Astropy development version
         - python: 3.6
-          env: ASTROPY_VERSION=development ASTROPY_USE_SYSTEM_PYTEST=1
+          env: ASTROPY_VERSION=development
 
         # Try older numpy version, 1.9 is tested above with py3.3 and 1.11 with py3.4
         - python: 3.5
@@ -74,7 +74,7 @@ matrix:
         # Try numpy pre-release version, this runs only when a pre-release
         # is available on pypi.
         - python: 3.6
-          env: NUMPY_VERSION=prerelease SETUP_CMD='test' ASTROPY_USE_SYSTEM_PYTEST=1
+          env: NUMPY_VERSION=prerelease SETUP_CMD='test'
 
         # try a version *without* h5py - we need this for readthedocs
         - python: 2.7
