--- a/.travis.yml
+++ b/.travis.yml
@@ -62,6 +62,10 @@ matrix:
           env: NUMPY_VERSION=1.11
                CONDA_DEPENDENCIES='cython scipy requests matplotlib h5py beautiful-soup'
 
+        - python: 3.5
+          env: SETUP_CMD='test'
+               NUMPY_VERSION=1.10
+
         # Try Astropy development version
         - python: 3.6
           env: ASTROPY_VERSION=development ASTROPY_USE_SYSTEM_PYTEST=1
