--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,9 @@ language: python
 
 python:
     - 2.7
-    - 3.3
-    - 3.4
     - 3.5
     - 3.6
+    - 3.7
 
 # Setting sudo to false opts in to Travis-CI container-based builds.
 sudo: false
@@ -52,39 +51,28 @@ matrix:
         - python: 3.6
           env: SETUP_CMD='build_sphinx -w'
 
-        # Python3.3 is a bit old, thus conda doesn't have all version dependencies including newer numpies
-        - python: 3.3
-          env: NUMPY_VERSION=1.9
-                ASTROPY_VERSION=1.3
-               CONDA_DEPENDENCIES='cython scipy requests matplotlib h5py beautiful-soup'
-
-        - python: 3.4
-          env: NUMPY_VERSION=1.11
-               CONDA_DEPENDENCIES='cython scipy requests matplotlib h5py beautiful-soup'
-
-        - python: 3.5
-          env: SETUP_CMD='test'
-               NUMPY_VERSION=1.10
-
         # Try Astropy development version
-        - python: 3.6
+        - python: 3.7
           env: ASTROPY_VERSION=development ASTROPY_USE_SYSTEM_PYTEST=1
 
         # Try numpy pre-release version, this runs only when a pre-release
         # is available on pypi.
-        - python: 3.6
+        - python: 3.7
           env: NUMPY_VERSION=prerelease SETUP_CMD='test' ASTROPY_USE_SYSTEM_PYTEST=1
 
         # try a version *without* h5py - we need this for readthedocs
         - python: 2.7
           env: CONDA_DEPENDENCIES="`echo $CONDA_DEPENDENCIES | sed 's/ h5py//'`" # this magic incantation removes the substring " h5py" from the dependencies
 
-before_install:
+# before_install:
 
     # If there are matplotlib tests, comment these out to
     # Make sure that interactive matplotlib backends work
-    - export DISPLAY=:99.0
-    - sh -e /etc/init.d/xvfb start
+    # - export DISPLAY=:99.0
+    # - sh -e /etc/init.d/xvfb start
+
+services:
+  - xvfb
 
 install:
 
