--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,9 @@ show-response = 1
 minversion = 2.2
 norecursedirs = build docs/_build
 doctest_plus = enabled
-markers = slow
+markers =
+    slow
+    installation_test
 
 [ah_bootstrap]
 auto_use = True
