Added windows testing on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,10 @@ matrix:
         - python: 3.7
           env: CONDA_DEPENDENCIES="`echo $CONDA_DEPENDENCIES | sed 's/ h5py//'`" # this magic incantation removes the substring " h5py" from the dependencies
 
+        # try on windows
+        - os: windows
+          env: PYTHON_VERSION=3.7 SETUP_CMD='test'
+
 # before_install:
 
     # If there are matplotlib tests, comment these out to
