--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -18,17 +18,17 @@ jobs:
     strategy:
       matrix:
         include:
-          - name: Python 3.7 with minimal dependencies
+          - name: Ubuntu - Python 3.7 with all optional dependencies
             os: ubuntu-latest
             python: 3.7
             toxenv: py37-test-alldeps
 
-          - name: Python 3.7 with minimal dependencies
+          - name: MacOs - Python 3.7 with all optional dependencies
             os: macos-latest
             python: 3.7
             toxenv: py37-test-alldeps
 
-          - name: Windows - Python 3.8 with all optional dependencies
+          - name: Windows - Python 3.7 with all optional dependencies
             os: windows-latest
             python: 3.7
             toxenv: py37-test-alldeps
