Dropped the windows test and tried formatting the env name as a string, as in photutils

--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -21,17 +21,12 @@ jobs:
           - name: Ubuntu - Python 3.7 with all optional dependencies
             os: ubuntu-latest
             python: 3.7
-            toxenv: py37-test-alldeps
+            toxenv: 'py37-test-alldeps'
 
           - name: MacOs - Python 3.7 with all optional dependencies
             os: macos-latest
             python: 3.7
-            toxenv: py37-test-alldeps
-
-          - name: Windows - Python 3.7 with all optional dependencies
-            os: windows-latest
-            python: 3.7
-            toxenv: py37-test-alldeps
+            toxenv: 'py37-test-alldeps'
 
     steps:
     - name: Checkout code
