--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -19,6 +19,8 @@ jobs:
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v1.12.0
+        env:
+          CIBW_BEFORE_BUILD: pip install numpy
 
       - uses: actions/upload-artifact@v2
         with:
