--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -21,6 +21,7 @@ jobs:
         uses: pypa/cibuildwheel@v1.12.0
         env:
           CIBW_BEFORE_BUILD: pip install numpy Cython
+          CIBW_PROJECT_REQUIRES_PYTHON: ">=3.6"
 
       - uses: actions/upload-artifact@v2
         with:
