--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -18,10 +18,10 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v1.12.0
+        uses: pypa/cibuildwheel@2.10.0
         env:
           CIBW_BEFORE_BUILD: pip install oldest-supported-numpy Cython
-          CIBW_PROJECT_REQUIRES_PYTHON: ">=3.6"
+          CIBW_PROJECT_REQUIRES_PYTHON: ">=3.7"
           CIBW_SKIP: pp*
 
       - uses: actions/upload-artifact@v2
