--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,5 +1,12 @@
 version: 2
 
+build:
+  os: ubuntu-20.04
+  apt_packages:
+    - graphviz
+  tools:
+    python: "3.9"
+
 sphinx:
   configuration: docs/source/conf.py
 
@@ -8,4 +15,3 @@ python:
   install:
     - method: pip
       path: .
-    - requirements: docs/rtd-pip-requirements
