Add docs requirements to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,3 +33,12 @@ license = BSD
 url = http://astropy.org/
 edit_on_github = True
 github_project = astropy/halotools
+
+
+[options.extras_require]
+docs = 
+  numpy
+  matplotlib
+  Cython
+  astropy
+  scipy
