--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -14,4 +14,5 @@ python:
   install:
     - method: pip
       path: .
-    - requirements: docs/requirements.txt
+      extra_requirements:
+        - docs
