--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,5 @@ filename = "CHANGES.rst"
 
 
 [build-system]
-requires = ["setuptools", "wheel"]
+requires = ["setuptools", "wheel", "cython", "oldest-supported-numpy", "extension-helpers"]
 build-backend = 'setuptools.build_meta'
