--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -24,7 +24,8 @@ jobs:
         run: python -m pip install cibuildwheel==2.10.0
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@2.10.0
+        # uses: pypa/cibuildwheel@2.10.0
+        run: python -m cibuildwheel --output-dir wheelhouse
         env:
           CIBW_BEFORE_BUILD: pip install oldest-supported-numpy Cython
           CIBW_PROJECT_REQUIRES_PYTHON: ">=3.9"
