--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,7 @@ auto_use = True
 
 
 [options]
+packages = find:
 python_requires = >=3.9
 
 install_requires =
@@ -57,8 +58,6 @@ install_requires =
    beautifulsoup4
 tests_require =
    pytest-astropy
-build_requires =
-   Cython
 
 
 [options.extras_require]
