--- a/setup.cfg
+++ b/setup.cfg
@@ -1,68 +1,80 @@
 [metadata]
 name = halotools
-version = 0.8
-description = Package designed to analyze N-body simulations and constrain models of cosmology and galaxy evolution.
 author = Andrew Hearin
 author_email = ahearin@anl.gov
-license = BSD
+license = BSD 3-Clause
+license_files = licenses/LICENSE.rst
 url = http://astropy.org/
+description = Package designed to analyze N-body simulations and constrain models of cosmology and galaxy evolution.
+long_description = file: README.rst
+long_description_content_type = text/x-rst
 edit_on_github = True
 github_project = astropy/halotools
 
+[options]
+zip_safe = False
+packages = find:
+python_requires = >=3.9
+setup_requires = setuptools_scm
+install_requires =
+    astropy numpy scipy requests beautifulsoup4 cython
 
-[build_docs]
-source-dir = docs
-build-dir = docs/_build
-all_files = 1
+[options.extras_require]
+all =
+    h5py
+test =
+    pytest-astropy
+docs =
+    sphinx-astropy
+    matplotlib
 
-
-[build_sphinx]
-source-dir = docs
-build-dir = docs/_build
-all_files = 1
-
-
-[upload_docs]
-upload-dir = docs/_build/html
-show-response = 1
-
+[options.package_data]
+halotools =
+    data/*
+    utils/tests/data/*
+    sim_manager/tests/data/*
 
 [tool:pytest]
+testpaths = "halotools"
+astropy_header = true
+doctest_plus = enabled
+text_file_format = rst
+addopts = --doctest-ignore-import-errors
 minversion = 6.0
 norecursedirs = build docs/_build
-doctest_plus = enabled
-addopts = --doctest-ignore-import-errors
 markers =
     slow
     installation_test
 
+[coverage:run]
+omit =
+    halotools/_astropy_init*
+    halotools/conftest.py
+    halotools/*setup_package*
+    halotools/tests/*
+    halotools/*/tests/*
+    halotools/extern/*
+    halotools/version*
+    */halotools/_astropy_init*
+    */halotools/conftest.py
+    */halotools/*setup_package*
+    */halotools/tests/*
+    */halotools/*/tests/*
+    */halotools/extern/*
+    */halotools/version*
 
-[flake8]
-max-line-length = 88
-extend-ignore = E203,F403
-
-
-[ah_bootstrap]
-auto_use = True
-
-
-[options]
-packages = find:
-python_requires = >=3.9
-
-install_requires =
-   numpy
-   scipy
-   astropy>=5.0
-   requests
-   beautifulsoup4
-tests_require =
-   pytest-astropy
-
-
-[options.extras_require]
-test=
-  pytest-astropy
-docs=
-  matplotlib
-  sphinx-astropy>=1.5
+[coverage:report]
+exclude_lines =
+    # Have to re-enable the standard pragma
+    pragma: no cover
+    # Don't complain about packages we have installed
+    except ImportError
+    # Don't complain if tests don't hit assertions
+    raise AssertionError
+    raise NotImplementedError
+    # Don't complain about script hooks
+    def main\(.*\):
+    # Ignore branches that don't pertain to this version of Python
+    pragma: py{ignore_python_version}
+    # Don't complain about IPython completion helper
+    def _ipython_key_completions_
