Include docs in testing

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,7 @@ halotools =
     sim_manager/tests/data/*
 
 [tool:pytest]
-testpaths = "halotools"
+testpaths = "halotools" "docs"
 astropy_header = true
 doctest_plus = enabled
 text_file_format = rst
