--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,7 @@ halotools =
     data/*
     utils/tests/data/*
     sim_manager/tests/data/*
+    empirical_models/phase_space_models/analytic_models/satellites/nfw/kernels/tests/data/*
 
 [tool:pytest]
 testpaths = "halotools" "docs"
