--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,12 @@ packages = find:
 python_requires = >=3.9
 setup_requires = setuptools_scm
 install_requires =
-    astropy numpy scipy requests beautifulsoup4 cython
+    astropy
+    numpy
+    scipy
+    requests
+    beautifulsoup4
+    cython
 
 [options.extras_require]
 all =
