--- a/setup.cfg
+++ b/setup.cfg
@@ -4,11 +4,11 @@ author = Andrew Hearin
 author_email = ahearin@anl.gov
 license = BSD 3-Clause
 license_files = licenses/LICENSE.rst
-url = http://astropy.org/
+url = http://astropy.org
 description = Package designed to analyze N-body simulations and constrain models of cosmology and galaxy evolution.
 long_description = file: README.rst
 long_description_content_type = text/x-rst
-edit_on_github = True
+edit_on_github = False
 github_project = astropy/halotools
 
 [options]
@@ -24,14 +24,18 @@ install_requires =
     beautifulsoup4
     cython
 
+[options.entry_points]
+console_scripts =
+    astropy-package-template-example = packagename.example_mod:main
+
 [options.extras_require]
 all =
     h5py
 test =
     pytest-astropy
+    h5py
 docs =
     sphinx-astropy
-    matplotlib
 
 [options.package_data]
 halotools =
@@ -40,14 +44,13 @@ halotools =
     sim_manager/tests/data/*
     empirical_models/phase_space_models/analytic_models/satellites/nfw/kernels/tests/data/*
 
+
 [tool:pytest]
 testpaths = "halotools" "docs"
 astropy_header = true
 doctest_plus = enabled
 text_file_format = rst
-addopts = --doctest-ignore-import-errors
-minversion = 6.0
-norecursedirs = build docs/_build
+addopts = --doctest-rst
 markers =
     slow
     installation_test
