--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,11 +1,9 @@
 version: 2
 
 build:
-  os: ubuntu-20.04
-  apt_packages:
-    - graphviz
+  os: "ubuntu-22.04"
   tools:
-    python: "3.9"
+    python: "mambaforge-22.9"
 
 sphinx:
   configuration: docs/conf.py
