--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -28,6 +28,11 @@ jobs:
             python: 3.9
             toxenv: 'py39-test-alldeps'
 
+          - name: Ubuntu - Python 3.12 with all optional dependencies
+            os: ubuntu-latest
+            python: 3.12
+            toxenv: 'py312-test-alldeps'
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
