--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 envlist =
     py{39}-test{,-alldeps,-devdeps}{,-cov}
+    py{312}-test{,-alldeps,-devdeps}{,-cov}
     build_docs
     linkcheck
     codestyle
