Add MacOS 3.12 test in matrix

--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -33,6 +33,11 @@ jobs:
             python: 3.12
             toxenv: 'py312-test-alldeps'
 
+          - name: MacOs - Python 3.12 with all optional dependencies
+            os: macos-latest
+            python: 3.12
+            toxenv: 'py312-test-alldeps'
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
