--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@
 requires = ["setuptools>=42.0.0",
             "setuptools_scm",
             "wheel",
-            "oldest-supported-numpy",
+            "numpy<2",
             "cython==3.0.2",
             "extension-helpers==1.*"]
 
