--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,7 @@ python_requires = >=3.9
 setup_requires = setuptools_scm
 install_requires =
     astropy
-    numpy<2
+    numpy
     scipy
     requests
     beautifulsoup4
