--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@
 requires = ["setuptools>=42.0.0",
             "setuptools_scm",
             "wheel",
+            "numpy",
             "cython==3.0.2",
             "extension-helpers==1.*"]
 
