--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ requires = ["setuptools>=42.0.0",
             "setuptools_scm",
             "wheel",
             "numpy",
-            "cython==3.0.2",
+            "cython>=3.0.0, <4",
             "extension-helpers==1.*"]
 
 build-backend = 'setuptools.build_meta'
