Drop support for python 3.9

--- a/.github/workflows/cron_tests.yml
+++ b/.github/workflows/cron_tests.yml
@@ -15,15 +15,25 @@ jobs:
     strategy:
       matrix:
         include:
-          - name: Ubuntu - Python 3.9 with all optional dependencies
+          - name: Ubuntu - Python 3.10 with all optional dependencies
             os: ubuntu-latest
-            python: 3.9
-            toxenv: 'py39-test-alldeps'
+            python: 3.10
+            toxenv: 'py10-test-alldeps'
 
-          - name: MacOs - Python 3.9 with all optional dependencies
+          - name: MacOs - Python 3.10 with all optional dependencies
             os: macos-latest
-            python: 3.9
-            toxenv: 'py39-test-alldeps'
+            python: 3.10
+            toxenv: 'py10-test-alldeps'
+
+          - name: Ubuntu - Python 3.11 with all optional dependencies
+            os: ubuntu-latest
+            python: 3.11
+            toxenv: 'py11-test-alldeps'
+
+          - name: MacOs - Python 3.11 with all optional dependencies
+            os: macos-latest
+            python: 3.11
+            toxenv: 'py11-test-alldeps'
 
           - name: Ubuntu - Python 3.12 with all optional dependencies
             os: ubuntu-latest
