--- a/.github/workflows/cron_tests.yml
+++ b/.github/workflows/cron_tests.yml
@@ -17,32 +17,32 @@ jobs:
         include:
           - name: Ubuntu - Python 3.10 with all optional dependencies
             os: ubuntu-latest
-            python: 3.10
+            python: "3.10"
             toxenv: 'py10-test-alldeps'
 
           - name: MacOs - Python 3.10 with all optional dependencies
             os: macos-latest
-            python: 3.10
+            python: "3.10"
             toxenv: 'py10-test-alldeps'
 
           - name: Ubuntu - Python 3.11 with all optional dependencies
             os: ubuntu-latest
-            python: 3.11
+            python: "3.11"
             toxenv: 'py11-test-alldeps'
 
           - name: MacOs - Python 3.11 with all optional dependencies
             os: macos-latest
-            python: 3.11
+            python: "3.11"
             toxenv: 'py11-test-alldeps'
 
           - name: Ubuntu - Python 3.12 with all optional dependencies
             os: ubuntu-latest
-            python: 3.12
+            python: "3.12"
             toxenv: 'py312-test-alldeps'
 
           - name: MacOs - Python 3.12 with all optional dependencies
             os: macos-latest
-            python: 3.12
+            python: "3.12"
             toxenv: 'py312-test-alldeps'
 
     steps:
