--cov-config={toxinidir}/setup.cfg --> --cov-config={toxinidir}/pyproject.toml

--- a/tox.ini
+++ b/tox.ini
@@ -57,7 +57,7 @@ extras =
 commands =
     pip freeze
     !cov: pytest --pyargs halotools {toxinidir}/docs {posargs}
-    cov: pytest --pyargs halotools {toxinidir}/docs --cov halotools --cov-config={toxinidir}/setup.cfg {posargs}
+    cov: pytest --pyargs halotools {toxinidir}/docs --cov halotools --cov-config={toxinidir}/pyproject.toml {posargs}
     cov: coverage xml -o {toxinidir}/coverage.xml
 
 [testenv:build_docs]
