dependencies are not dynamic yet

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "halotools"
-dynamic = ["version", "dependencies"]
+dynamic = ["version"]
 description = "Package designed to analyze N-body simulations and constrain models of cosmology and galaxy evolution"
 readme = "README.rst"
 authors = [
