--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,14 @@ test =
 docs =
     sphinx-astropy
 
+[options.package_data]
+halotools =
+    data/*
+    utils/tests/data/*
+    sim_manager/tests/data/*
+    empirical_models/phase_space_models/analytic_models/satellites/nfw/kernels/tests/data/*
+
+
 [tool:pytest]
 testpaths = "halotools" "docs"
 astropy_header = true
