--- a/.github/workflows/wheels.yaml
+++ b/.github/workflows/wheels.yaml
@@ -5,6 +5,13 @@ on:
   release:
     types:
       - published
+  push:
+    branches:
+    - master
+  #  tags: # run CI if specific tags are pushed
+  pull_request:
+    branches:
+      - master
 
 jobs:
   build_wheels:
