--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,11 @@ readme = "README.rst"
 authors = [
     { name = "Andrew Hearin", email = "ahearin@anl.gov" }
 ]
-license = { text = "BSD-3-Clause" }
+license = { file = 'LICENSE' }
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: BSD License",
+]
 requires-python = ">=3.10"
 
 [tool.setuptools.dynamic]
