Add workflows for python 3.13

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist =
     py{310}-test{,-alldeps,-devdeps}{,-cov}
     py{311}-test{,-alldeps,-devdeps}{,-cov}
     py{312}-test{,-alldeps,-devdeps}{,-cov}
+    py{313}-test{,-alldeps,-devdeps}{,-cov}
     build_docs
     linkcheck
     codestyle
