--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -38,6 +38,16 @@ jobs:
             python: "3.12"
             toxenv: 'py312-test-alldeps'
 
+          - name: Ubuntu - Python 3.13 with all optional dependencies
+            os: ubuntu-latest
+            python: "3.13"
+            toxenv: 'py313-test-alldeps'
+
+          - name: MacOs - Python 3.13 with all optional dependencies
+            os: macos-latest
+            python: "3.13"
+            toxenv: 'py313-test-alldeps'
+
     steps:
     - name: Checkout code
       uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4.2.2
